--- a/CrochetByJk.Messaging/packages.config
+++ b/CrochetByJk.Messaging/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="Autofac" version="4.0.0" targetFramework="net461" />
   <package id="Autofac.Mvc5" version="4.0.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.0" targetFramework="net461" />
