--- a/CrochetByJk.Messaging/CrochetByJk.Messaging.csproj
+++ b/CrochetByJk.Messaging/CrochetByJk.Messaging.csproj
@@ -97,8 +97,10 @@
     <Compile Include="Exceptions\NotImplementedHandlerException.cs" />
     <Compile Include="HandleResult\HandleResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queries\GetAllCategoriesQuery.cs" />
     <Compile Include="Queries\GetApplicationUserManagerQuery.cs" />
     <Compile Include="Queries\TestQuery.cs" />
+    <Compile Include="QueryHandlers\GetAllCategoriesQueryHandler.cs" />
     <Compile Include="QueryHandlers\GetApplicationUserManagerQueryHandler.cs" />
     <Compile Include="QueryHandlers\TestQueryHandler.cs" />
     <Compile Include="Registration\Registration.cs" />
