--- a/CrochetByJk/Web.config
+++ b/CrochetByJk/Web.config
@@ -16,7 +16,7 @@
   </appSettings>
   <system.web>
     <customErrors mode="Off" />
-    <compilation debug="false" />
+    <compilation debug="true" />
     <!--<httpRuntime targetFramework="4.6.1" />-->
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
