--- a/CrochetByJk.Components/CrochetByJk.Components.csproj
+++ b/CrochetByJk.Components/CrochetByJk.Components.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D798377D-E728-43D9-87CF-EE7921617B85}</ProjectGuid>
+    <ProjectGuid>{D7B83A38-9FA5-4A6D-8F8D-74BB122B2FDB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CrochetByJk.Model</RootNamespace>
-    <AssemblyName>CrochetByJk.Model</AssemblyName>
+    <RootNamespace>CrochetByJk.Components</RootNamespace>
+    <AssemblyName>CrochetByJk.Components</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -34,24 +34,7 @@
       <HintPath>..\packages\Autofac.4.0.0\lib\net451\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -62,20 +45,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contexts\CrochetByJkDbContext.cs" />
-    <Compile Include="Model\ApplicationUser.cs" />
-    <Compile Include="Contexts\SecurityContext.cs" />
-    <Compile Include="Model\Category.cs" />
-    <Compile Include="Model\Picture.cs" />
-    <Compile Include="Model\Product.cs" />
+    <Compile Include="ProductGalleryProvider.cs" />
+    <Compile Include="IProductGalleryProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registration\Registration.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <ProjectReference Include="..\CrochetByJk.Messaging.Core\CrochetByJk.Messaging.Core.csproj">
+      <Project>{f20a8f04-7131-4a2e-8b94-bd193056730a}</Project>
+      <Name>CrochetByJk.Messaging.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CrochetByJk.Messaging\CrochetByJk.Messaging.csproj">
+      <Project>{620d8994-609b-4275-abdd-cdc6b28a95e3}</Project>
+      <Name>CrochetByJk.Messaging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CrochetByJk.Model\CrochetByJk.Model.csproj">
+      <Project>{D798377D-E728-43D9-87CF-EE7921617B85}</Project>
+      <Name>CrochetByJk.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
