--- a/CrochetByJk.Messaging/App.config
+++ b/CrochetByJk.Messaging/App.config
@@ -10,4 +10,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="CrochetByJk" connectionString="Server=DESKTOP-J45OU76\SQLEXPRESS;Database=CrochetByJk;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
