--- a/CrochetByJk.Common/CrochetByJk.Common.csproj
+++ b/CrochetByJk.Common/CrochetByJk.Common.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Categories.cs" />
+    <Compile Include="Categories\Categories.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Roles\ApplicationRoles.cs" />
     <Compile Include="ShortGuid\ShortGuid.cs" />
