--- a/CrochetByJk.Model/CrochetByJk.Model.csproj
+++ b/CrochetByJk.Model/CrochetByJk.Model.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Model\ApplicationUser.cs" />
     <Compile Include="Contexts\SecurityContext.cs" />
     <Compile Include="Model\Category.cs" />
+    <Compile Include="Model\Gallery.cs" />
     <Compile Include="Model\Picture.cs" />
     <Compile Include="Model\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
