--- a/CrochetByJk/CrochetByJk.Web.csproj
+++ b/CrochetByJk/CrochetByJk.Web.csproj
@@ -388,7 +388,7 @@
     <Content Include="Views\Auth\Register.cshtml" />
     <Content Include="Views\Admin\Panel.cshtml" />
     <Content Include="Views\Shared\_AdminLayout.cshtml" />
-    <Content Include="Views\Product\Dresses.cshtml" />
+    <Content Include="Views\Product\CategoryProducts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
