--- a/CrochetByJk.Components/CrochetByJk.Components.csproj
+++ b/CrochetByJk.Components/CrochetByJk.Components.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -45,6 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmailSender\EmailMessage.cs" />
+    <Compile Include="EmailSender\EmailSender.cs" />
+    <Compile Include="EmailSender\IEmailSender.cs" />
+    <Compile Include="EmailSender\IEmailMessage.cs" />
+    <Compile Include="ProductGalleryProvider\IPicture.cs" />
+    <Compile Include="ProductGalleryProvider\IPictureResizer.cs" />
+    <Compile Include="ProductGalleryProvider\PictureResizer.cs" />
     <Compile Include="ProductGalleryProvider\ProductGalleryProvider.cs" />
     <Compile Include="ProductGalleryProvider\IProductGalleryProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
