--- a/CrochetByJk.Messaging/CrochetByJk.Messaging.csproj
+++ b/CrochetByJk.Messaging/CrochetByJk.Messaging.csproj
@@ -95,15 +95,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bus\CqrsBus.cs" />
+    <Compile Include="CommandHandlers\AddNewsletterClientCommandHandler.cs" />
+    <Compile Include="CommandHandlers\DeleteClientFromNewsletterCommandHandler.cs" />
     <Compile Include="CommandHandlers\SaveProductCommandHandler.cs" />
+    <Compile Include="Commands\AddNewsletterClientCommand.cs" />
+    <Compile Include="Commands\DeleteClientFromNewsletterCommand.cs" />
     <Compile Include="Commands\SaveProductCommand.cs" />
-    <Compile Include="Commands\SendProductQuestionEmailCommand.cs" />
     <Compile Include="Exceptions\NotImplementedHandlerException.cs" />
     <Compile Include="HandleResult\HandleResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\GetAllCategoriesQuery.cs" />
     <Compile Include="Queries\GetApplicationUserManagerQuery.cs" />
     <Compile Include="Queries\GetLastProductsQuery.cs" />
+    <Compile Include="Queries\GetNewletterClientsEmailsQuery.cs" />
     <Compile Include="Queries\GetProductQuery.cs" />
     <Compile Include="Queries\GetProductsFromCategoryQuery.cs" />
     <Compile Include="Queries\GetAllProductNamesFromCategoryQuery.cs" />
@@ -111,6 +115,7 @@
     <Compile Include="QueryHandlers\GetAllCategoriesQueryHandler.cs" />
     <Compile Include="QueryHandlers\GetApplicationUserManagerQueryHandler.cs" />
     <Compile Include="QueryHandlers\GetLastProductsQueryHandler.cs" />
+    <Compile Include="QueryHandlers\GetNewletterClientsEmailsQueryHandler.cs" />
     <Compile Include="QueryHandlers\GetProductQueryHandler.cs" />
     <Compile Include="QueryHandlers\GetProductsFromCategoryQueryHandler.cs" />
     <Compile Include="QueryHandlers\GetAllProductNamesFromCategoryQueryHandler.cs" />
@@ -121,9 +126,7 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CrochetByJk.Messaging.Core\CrochetByJk.Messaging.Core.csproj">
