--- a/CrochetByJk.Tests/CrochetByJk.Tests.csproj
+++ b/CrochetByJk.Tests/CrochetByJk.Tests.csproj
@@ -76,8 +76,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Newsletter\newsletter_tests.cs" />
-    <Compile Include="PictureResizerTests\picture_resizer_tests.cs" />
-    <Compile Include="ValidatorsTests\validator_tests.cs" />
+    <Compile Include="PictureResizer\picture_resizer_tests.cs" />
+    <Compile Include="Validators\validator_tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Content Include="Newsletter\TestFiles\3.jpg" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
