--- a/CrochetByJk.Components/packages.config
+++ b/CrochetByJk.Components/packages.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.0.0" targetFramework="net461" />
+  <package id="Hangfire.Core" version="1.6.12" targetFramework="net461" />
+  <package id="Hangfire.SqlServer" version="1.6.12" targetFramework="net461" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="5.0.1" targetFramework="net461" />
+  <package id="NLog" version="4.4.5" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
 </packages>
